SBuild 0.3.0.9000

* Added ability to translate/resolve target refs to files.
* Changed default to not use fsc when compiling build files and added new
  commandline option "--fsc" to enable fsc.

SBuild 0.3.0 - 2013-01-04

* SBuild is now based on Scala 2.10
* ZipSchemeHandler: Fixed issue with fail of unpacking of some zip files.
* New Scalac Addon which is independent of SBuild Scalac Runtime. Thus, it is
  now possible to compile for Scala versions different than SBuild's one.
* ScalaTest Addon: Added fork option.

SBuild 0.2.0 - 2012-11-08

* A buildfile can now include other scala files. Added @include to share common
  configuration and functionality.
* Added project accessor to TargetContext.
* Added --quiet command line option to suppress percentage calculation and
  status messages. This will drastically speed up SBuild's initialization time
  for larger multi-projects, as the dependency tree is not walked trough in
  advance.
* Added arguments parameter to AntJava, as args is deprecated.
* Added more options/parameters to ScalaTest addon.
* Command line option --create-stub now tries to copy a stub from SBuild's home
  directory ($SBUILD_HOME/stub/SBuild.scala) if such one exists, before using
  a hardcoded one.

SBuild 0.1.5 - 2012-10-26

* Fixed NPE bug in AntCopy.

SBuild 0.1.4 - 2012-10-23

* Added parameters to AntZip Ant wrapper: compress, keepCompression, filesOnly,
  fileSet, fileSets
* Added parameters to AntJar Ant wrapper: compress, keepCompression, filesOnly,
  metaInf, fileSet, fileSets, manifestEntries, manifestSectionEntries, service,
  services
* Added parameter to AntCopy Ant wrapper: fileSet
* Added @configuration annotation, to declare required configuration parameters
  in a project
* Eclipse plugin: Fixed an problem with an incomplete project classpath that
  could break loading of projects in some situations.
* Eclipse plugin: Handle errors while reading the build file and retrieving
  dependencies