@@ -3,22 +3,20 @@ package de.tototec.sbuild
 import java.io.File
 
 object Path {
+  
   def apply(path: String, pathes: String*)(implicit project: Project): File = {
-    val file = {
-      val origFile = new File(path)
-      if (origFile.isAbsolute) {
-        origFile.getCanonicalFile
-      } else {
-        val absFile = new File(project.projectDirectory, path)
-        absFile.getCanonicalFile
-      }
-    }
-    if(pathes.isEmpty) {
+    val file = normalize(new File(path), project.projectDirectory)
+    if (pathes.isEmpty) {
       file
-    }
-    else {
+    } else {
       pathes.foldLeft(file)((f, e) => new File(f, e))
     }
   }
+
+  def normalize(path: File, baseDir: File = new File(".")): File = {
+    val absFile = if (path.isAbsolute) path else new File(baseDir, path.getPath)
+    new File(absFile.toURI.normalize)
+  }
+
 }
 
